--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,8 @@ pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 .aider*
+
+# Ignore large binaries and media files
+*.exe
+*.mp4
+
